# BSI-NextGen

./: .deploy-trigger  .env.example  .env.netlify  .eslintrc.json  .gitignore  .prettierignore  .vercelignore  ALL-TASKS-COMPLETE.md  ANALYTICS-DEPLOYMENT-GUIDE.md  ANALYTICS-MIGRATION-COMPLETE-2025-11-20.md  ANALYTICS-MIGRATION-NEEDED-2025-11-20.md  API_AND_PAGE_COMPLETION_SUMMARY.md  API_TESTING_GUIDE.md  API_TOKEN_ISSUE.md  AUTOMATION_COMPLETE.md  BACKEND_DEPLOYMENT_COMPLETE.md  BLAZE-3D-IMPLEMENTATION-SUMMARY.md  BLAZE-3D-QUICK-START.md  BLAZE-3D-VISUALIZATION-ARCHITECTURE.md  BLAZE-INTEGRATION.md  BLAZE-TRENDS-IMPLEMENTATION.md  BLAZESPORTSINTEL-DEPLOYMENT-COMPLETE.md  BUILD_SUCCESS_REPORT.md  CACHE-FIX-IMPLEMENTATION.md  CARDINALS-API-COMPLETE.md  CHAMPIONSHIP-DASHBOARD-INTEGRATION-COMPLETE.md  CLAUDE.md  CLOUDFLARE-PAGES-GITHUB-SETUP.md  CLOUDFLARE-PAGES-SETUP.md  CLOUDFLARE-PERFORMANCE-ANALYSIS.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CODEBASE_REVIEW.md  COLLEGE-BASEBALL-BOX-SCORE-COMPLETE.md  COLLEGE-BASEBALL-IMPLEMENTATION.md  COMPLETION_REPORT.md  COMPONENT-QUICK-START.md  CONTRIBUTING.md  DEPLOY-NOW.md  DEPLOYMENT-INTEGRATION-ANALYSIS.md  DEPLOYMENT-LANDSCAPE-MAP.md  (+99 more)
.claude/: README.md  settings.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: lighthouse-budgets.json
.husky/: pre-commit
docs/: API_DOCUMENTATION.md  API_INVENTORY.md  CLOUDFLARE-NETLIFY-SECRETS.md  CLOUDFLARE_GITHUB_ENVIRONMENTS.md  DATABASE_MONITORING.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_QUICKSTART.md  DEV_ENVIRONMENT_SETUP.md  DOMAIN_SETUP_GUIDE.md  ERROR_HANDLING_SLA.md  EXECUTIVE_BRIEFING.md  HYPERDRIVE_IMPLEMENTATION.md  HYPERDRIVE_SETUP.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  LEAGUE_WIDE_DATA_MANAGEMENT.md  LEAGUE_WIDE_IMPLEMENTATION_SUMMARY.md  OBSERVABILITY_DASHBOARDS.md  README.md  (+15 more)
mmi-package/: pyproject.toml
mmi-package/mmi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+273 files in other folders)
